--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,8 +9,10 @@ description = "Domain-agnostic knowledge graph framework for entity and relation
 requires-python = ">=3.12"
 license = "MIT"
 dependencies = [
+    "flake8>=7.3.0",
     "pydantic>=2.0",
     "pylint>=4.0.4",
+    "ruff>=0.14.13",
     "scikit-learn>=1.8.0",
 ]
 
