--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ dependencies = [
     "flake8>=7.3.0",
     "pydantic>=2.0",
     "pylint>=4.0.4",
+    "pytest>=9.0.2",
+    "pytest-asyncio>=1.3.0",
     "ruff>=0.14.13",
     "scikit-learn>=1.8.0",
 ]
@@ -47,4 +49,10 @@ max-line-length = 200
 [tool.flake8]
 line-length = 200
 ignore = ["E203", "E266", "E501", "W503", "E402"]
+
+[dependency-groups]
+dev = [
+    "pytest>=9.0.2",
+    "pytest-asyncio>=1.3.0",
+]
 
