GitHub CI/CD pipeline, more linter work

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ description = "Domain-agnostic knowledge graph framework for entity and relation
 requires-python = ">=3.12"
 license = "MIT"
 dependencies = [
+    "black>=26.1.0",
     "flake8>=7.3.0",
     "pydantic>=2.0",
     "pylint>=4.0.4",
