--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ license = "MIT"
 dependencies = [
     "black>=26.1.0",
     "flake8>=7.3.0",
+    "mypy>=1.19.1",
     "pydantic>=2.0",
     "pylint>=4.0.4",
     "pytest>=9.0.2",
