--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "black>=26.1.0",
     "flake8>=7.3.0",
     "mypy>=1.19.1",
+    "ollama>=0.6.1",
     "pydantic>=2.0",
     "pylint>=4.0.4",
     "pytest>=9.0.2",
