Add medlit-specific tests for authority lookup
New test directory examples/medlit/tests/ with tests for:
- DBPedia label matching (exact, substring, prefix, HTML stripping)
- MeSH ID extraction from API results
- Garbage match rejection (HER2-enriched → Insect)

Also updated pyproject.toml to include medlit tests in default discovery.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,7 @@ dev = [
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
 asyncio_default_fixture_loop_scope = "function"
-testpaths = ["tests"]
+testpaths = ["tests", "examples/medlit/tests"]
 
 [tool.hatch.build.targets.wheel]
 packages = ["kgraph"]
