Fix promotion lookup parameter signature and add integration tests
- Fix get_promotion_policy() signature to accept lookup parameter across all domains
  - Updated DomainSchema base class to include lookup parameter
  - Updated MedLitDomainSchema, SherlockDomainSchema, and test SimpleDomainSchema
  - Fixes mypy/pylint type signature incompatibility errors

- Move canonical ID lookup from extraction to promotion phase
  - Remove tool calling from MedLitEntityExtractor (too slow during extraction)
  - Lookup service now only used during promotion phase via run_promotion(lookup=...)
  - Simplifies extraction pipeline while maintaining canonical ID assignment

- Add comprehensive tests for lookup parameter integration
  - New test file: examples/medlit/tests/test_promotion_lookup.py
    * Tests lookup parameter passed through get_promotion_policy()
    * Tests lookup service used during promotion
    * Tests fallback when lookup is None
  - Added signature compliance test in tests/test_promotion.py
  - Created examples/medlit/tests/conftest.py for fixture imports

- Update promotion thresholds and logic
  - Lowered medlit thresholds (min_usage=1, min_confidence=0.4) for LLM extraction
  - Add force-promote rule for high confidence (>=0.7) entities
  - Fix should_promote() to properly check all thresholds

- Enhance run_promotion() to accept and pass lookup parameter
  - Update IngestionOrchestrator.run_promotion() signature
  - Pass lookup through to domain.get_promotion_policy()
  - Update ingest script to pass lookup to promotion phase

- Add .gitignore entries for example data directories

All tests pass (120 tests) and all linters pass (pylint 10.00/10).

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,7 @@ htmlcov/
 # OS
 .DS_Store
 Thumbs.db
+
+# Example data files (can be regenerated)
+examples/medlit/pmc_json/
+examples/medlit/pmc_paper_json/
