Enhance server bundle loading, docs, entity resolution
This commit introduces several enhancements to the KGServer, primarily focusing
on improved bundle loading, documentation handling, and laying the groundwork
for more robust entity classification and relationship extraction.

Key changes include:

- **Introduce a strategy for advanced entity and relationship processing:** A
  new document (`MORE.md`) outlines a plan to use `scispaCy` and UMLS for
  better entit validation and predicate refinement, addressing misclassification
  issues (e.g., H. pylori) and generic "associated with" relationships.
- **Refactor bundle loading for documentation assets:** `bundle_loader.py` has
  been refactored to modularize documentation asset processing, including
  dynamic MkDocs site building from bundle contents.
- **Update Docker configurations:**
    - `docker-compose.yml` now supports flexible bundle paths and uses service
      profiles for better environment management.
    - `kgserver/Dockerfile` is updated to copy `medlit_bundle` directly,
      streamlining bundle inclusion.
- **Improved documentation structure:** `kgserver/README.md` is renamed to
  `kgserver/index.md`, and MkDocs is now served at the root path (`/`) for
  better accessibility of the generated documentation.
- **KGServer project alignment:** `mkdocs.yml` is updated to reflect the
  `kgraph` repository, and `kgbundle` is no longer treated as an editable local
  dependency within `kgserver`, simplifying its dependency management.
- **Scrap extra docker-compose.yml file:** only need the top-level
  version.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,9 +7,10 @@ services:
     tty: true
     environment:
       DATABASE_URL: postgresql://postgres:postgres@postgres:5432/kgserver
-      BUNDLE_PATH: /bundle/S.zip
-    volumes:
-      - /home/wware/S.zip:/bundle/S.zip:ro
+      BUNDLE_PATH: /bundle
+    #volumes:
+    #  # - /home/wware/S.zip:/bundle/S.zip:ro
+    #  - ./medlit_bundle:/bundle:ro
     ports:
       - "8000:8000"
     depends_on:
