--- a/kgserver/mkdocs.yml
+++ b/kgserver/mkdocs.yml
@@ -1,7 +1,7 @@
 site_name: Domain-Agnostic Knowledge Graph Server
 site_description: Documentation for the domain-agnostic knowledge graph server
-repo_url: https://github.com/wware/kgserver
-repo_name: wware/kgserver
+repo_url: https://github.com/wware/kgraph
+repo_name: wware/kgraph
 
 theme:
   name: material
