add jupyter notebook server to stack

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,3 +1,18 @@
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+*.egg-info/
+dist/
+build/
+.pytest_cache/
+.mypy_cache/
+.ruff_cache/
+*.log
+postgres-data/
+notebooks/
+.git/
 **/.venv
 **/__pycache__
 **/*.pyc
