--- a/Dockerfile.jupyter
+++ b/Dockerfile.jupyter
@@ -54,9 +54,9 @@ WORKDIR /home/jovyan/work
 RUN uv pip install --system -e ./kgbundle
 RUN uv pip install --system -e .
 
-# Create notebooks directory
+# Create notebooks directory (only chmod dirs that need to be writable by host mounts)
 RUN mkdir -p /home/jovyan/notebooks
-RUN chmod -R 0777 /home/jovyan
+RUN chmod -R 0777 /home/jovyan/notebooks /home/jovyan/work
 
 # Expose Jupyter port
 EXPOSE 8888
