and results from the run

--- a/medlit_bundle/manifest.json
+++ b/medlit_bundle/manifest.json
@@ -1,9 +1,9 @@
 {
   "bundle_version": "v1",
-  "bundle_id": "37ff1ea2-c81c-4a69-959d-06d101ae2cba",
+  "bundle_id": "ebcd2f03-ce5b-42fa-a1ba-13d28dd98a49",
   "domain": "medlit",
   "label": "medical-literature",
-  "created_at": "2026-02-17T21:05:13.722992+00:00",
+  "created_at": "2026-02-18T20:03:57.447884+00:00",
   "entities": {
     "path": "entities.jsonl",
     "format": "jsonl"
@@ -16,10 +16,18 @@
     "path": "doc_assets.jsonl",
     "format": "jsonl"
   },
+  "mentions": {
+    "path": "mentions.jsonl",
+    "format": "jsonl"
+  },
+  "evidence": {
+    "path": "evidence.jsonl",
+    "format": "jsonl"
+  },
   "metadata": {
-    "entity_count": 31,
-    "relationship_count": 19,
+    "entity_count": 30,
+    "relationship_count": 13,
     "description": "Knowledge graph bundle of biomedical journal articles",
-    "kgraph_version": "47dfac1"
+    "kgraph_version": "b81fdef"
   }
 }
