--- a/kgserver/mkdocs.yml
+++ b/kgserver/mkdocs.yml
@@ -4,7 +4,9 @@ repo_url: https://github.com/wware/kgraph
 repo_name: wware/kgraph
 
 theme:
-  name: material
+  name: null
+  # variant options: 'modern' (new) or 'classic' (Material look)
+  variant: modern
 
 markdown_extensions:
   - pymdownx.highlight:
