--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "pytest-asyncio>=1.3.0",
     "ruff>=0.14.13",
     "scikit-learn>=1.8.0",
+    "zensical>=0.0.23",
 ]
 
 [project.optional-dependencies]
