--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,7 +37,7 @@ services:
     ports:
       - "8001:8001"
     depends_on:
-      api:
+      postgres:
         condition: service_healthy
     restart: unless-stopped
     networks:
