--- a/kgserver/nginx-mcp.conf
+++ b/kgserver/nginx-mcp.conf
@@ -1,7 +1,25 @@
 # Include this in your nginx server block when using docker-compose with the mcpserver service.
-# proxy_buffering off and proxy_read_timeout are required for SSE to work correctly.
+# - /mcp/ : SSE endpoint; proxy_buffering off and proxy_read_timeout required for SSE.
+# - /messages/ : MCP client POSTs here (URL is advertised by the SSE stream as /messages/);
+#   must proxy to mcpserver or the client gets 405 on the API.
 
-# FastMCP server (SSE transport)
+# FastMCP: messages endpoint (POST from client; place before location /)
+location /messages/ {
+    proxy_pass http://mcpserver:8001/messages/;
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "upgrade";
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+
+    proxy_buffering off;
+    proxy_read_timeout 3600s;
+    proxy_send_timeout 300s;
+}
+
+# FastMCP: SSE transport
 location /mcp/ {
     proxy_pass http://mcpserver:8001/;
     proxy_http_version 1.1;
@@ -12,8 +30,7 @@ location /mcp/ {
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header X-Forwarded-Proto $scheme;
 
-    # SSE requires these — disable buffering so events stream immediately
     proxy_buffering off;
     proxy_cache off;
-    proxy_read_timeout 3600s;  # SSE connections are long-lived
+    proxy_read_timeout 3600s;
 }
