--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,9 +8,9 @@ services:
     environment:
       DATABASE_URL: postgresql://postgres:postgres@postgres:5432/kgserver
       BUNDLE_PATH: /bundle
-    #volumes:
+    volumes:
+      - ./medlit_bundle:/bundle:ro
     #  # - /home/wware/S.zip:/bundle/S.zip:ro
-    #  - ./medlit_bundle:/bundle:ro
     ports:
       - "8000:8000"
     depends_on:
