--- a/medlit_bundle/manifest.json
+++ b/medlit_bundle/manifest.json
@@ -1,9 +1,9 @@
 {
   "bundle_version": "v1",
-  "bundle_id": "518522a3-f5b8-4b16-baab-5dc92d9daaca",
+  "bundle_id": "5c69d6ce8155413abd4ed8c175ede7d8",
   "domain": "medlit",
   "label": "medical-literature",
-  "created_at": "2026-02-19T21:16:40.890132+00:00",
+  "created_at": "2026-02-23T22:38:21.115002Z",
   "entities": {
     "path": "entities.jsonl",
     "format": "jsonl"
@@ -25,9 +25,8 @@
     "format": "jsonl"
   },
   "metadata": {
-    "entity_count": 593,
-    "relationship_count": 335,
-    "description": "Knowledge graph bundle of biomedical journal articles",
-    "kgraph_version": "c8f7955"
+    "entity_count": 181,
+    "relationship_count": 195,
+    "description": "Knowledge graph bundle from two-pass medlit pipeline"
   }
 }
