--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,8 @@ dependencies = [
     "scikit-learn>=1.8.0",
     "zensical>=0.0.23",
     "anthropic>=0.83.0",
+    "requests>=2.32.5",
+    "sqlalchemy>=2.0.46",
 ]
 
 [project.optional-dependencies]
