OK, maybe chat goes IN THE API SERVER, bug fixes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,19 @@ services:
     environment:
       DATABASE_URL: postgresql://postgres:postgres@postgres:5432/kgserver
       BUNDLE_PATH: /bundle
+      # Chainlit (mounted at /chat on same server)
+      MCP_SSE_URL: ${MCP_SSE_URL:-http://mcpserver:8001/sse}
+      LLM_PROVIDER: ${LLM_PROVIDER:-anthropic}
+      ANTHROPIC_API_KEY: ${ANTHROPIC_API_KEY:-}
+      ANTHROPIC_MODEL: ${ANTHROPIC_MODEL:-claude-sonnet-4-6}
+      OPENAI_API_KEY: ${OPENAI_API_KEY:-}
+      OPENAI_MODEL: ${OPENAI_MODEL:-gpt-4o}
+      OLLAMA_MODEL: ${OLLAMA_MODEL:-llama3.2}
+      OLLAMA_BASE_URL: ${OLLAMA_BASE_URL:-http://ollama:11434}
+      EXAMPLES_FILE: /app/chainlit/examples.yaml
     volumes:
       - ./medlit_bundle:/bundle:ro
+      - ./chainlit/examples.yaml:/app/chainlit/examples.yaml:ro
     #  # - /home/wware/S.zip:/bundle/S.zip:ro
     ports:
       - "8000:8000"
@@ -27,6 +38,7 @@ services:
       start_period: 10s
     profiles: ["api"]
 
+  # MCP server: can take 30–60s to start on small droplets (heavy Python imports: Strawberry, SQLAlchemy, storage)
   mcpserver:
     build:
       context: .
@@ -46,41 +58,8 @@ services:
       test: ["CMD", "python", "-c", "import urllib.request; urllib.request.urlopen('http://localhost:8001/health')"]
       interval: 30s
       timeout: 10s
-      retries: 3
-      start_period: 10s
-    profiles: ["api"]
-
-  # Chat: API keys from environment or project .env (Compose loads .env for substitution)
-  chat:
-    build:
-      context: ./chainlit
-      dockerfile: Dockerfile
-    ports:
-      - "8002:8002"
-    environment:
-      MCP_SSE_URL: ${MCP_SSE_URL:-http://mcpserver:8001/sse}
-      LLM_PROVIDER: ${LLM_PROVIDER:-anthropic}
-      ANTHROPIC_API_KEY: ${ANTHROPIC_API_KEY:-}
-      ANTHROPIC_MODEL: ${ANTHROPIC_MODEL:-claude-sonnet-4-6}
-      OPENAI_API_KEY: ${OPENAI_API_KEY:-}
-      OPENAI_MODEL: ${OPENAI_MODEL:-gpt-4o}
-      OLLAMA_MODEL: ${OLLAMA_MODEL:-llama3.2}
-      OLLAMA_BASE_URL: ${OLLAMA_BASE_URL:-http://ollama:11434}
-      EXAMPLES_FILE: /app/examples.yaml
-    volumes:
-      - ./chainlit/examples.yaml:/app/examples.yaml:ro
-    depends_on:
-      mcpserver:
-        condition: service_healthy
-    restart: unless-stopped
-    networks:
-      - kgserver-network
-    healthcheck:
-      test: ["CMD", "python", "-c", "import urllib.request; urllib.request.urlopen('http://localhost:8002/')"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 15s
+      retries: 5
+      start_period: 60s
     profiles: ["api"]
 
   jupyter:
