--- a/kgserver/Dockerfile
+++ b/kgserver/Dockerfile
@@ -61,9 +61,10 @@ COPY --from=builder /app/docs /app/docs
 COPY --from=builder /app/site /app/site
 COPY --from=ghcr.io/astral-sh/uv:latest /uv /usr/local/bin/uv
 
-# Copy kgbundle first, then kgserver contents
+# Copy kgbundle first, then kgserver contents and chainlit app (mounted at /chat)
 COPY kgbundle ./kgbundle
 COPY kgserver/ .
+COPY chainlit ./chainlit
 
 ENV PATH="/app/.venv/bin:$PATH" \
     PYTHONUNBUFFERED=1 \
