--- a/kgserver/nginx-mcp.conf
+++ b/kgserver/nginx-mcp.conf
@@ -1,7 +1,26 @@
-# Include this in your nginx server block when using docker-compose with the mcpserver service.
+# Include this in your nginx server block when using docker-compose with mcpserver.
+# - /chat/ : Chainlit chat UI (served by the API on same port); use same backend as main API.
+#   Docker: http://api:8000/ ; host nginx: http://localhost:8000/
 # - /mcp/ : SSE endpoint; proxy_buffering off and proxy_read_timeout required for SSE.
 # - /messages/ : MCP client POSTs here (URL is advertised by the SSE stream as /messages/);
 #   must proxy to mcpserver or the client gets 405 on the API.
+
+# Chainlit chat UI (same server as main API; place before location / so it takes precedence)
+# Use http://api:8000/ in Docker; http://localhost:8000/ when nginx is on the host.
+# WebSocket headers (Upgrade, Connection) required for Chainlit.
+location /chat/ {
+    proxy_pass http://api:8000/;
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "upgrade";
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+
+    proxy_buffering off;
+    proxy_read_timeout 300s;
+}
 
 # FastMCP: messages endpoint (POST from client; place before location /)
 location /messages/ {
