--- a/kgserver/pyproject.toml
+++ b/kgserver/pyproject.toml
@@ -7,11 +7,14 @@ requires-python = ">=3.13"
 dependencies = [
     # "kgbundle",
     "black[jupyter]>=26.1.0",
+    "chainlit>=2.0.0",
     "fastapi>=0.128.0",
     "fastmcp>=2.14.4",
     "flake8>=7.3.0",
     "httpx>=0.27.0",
+    "litellm>=1.0.0",
     "mcp>=1.25.0",
+    "pyyaml>=6.0",
     "mypy>=1.19.1",
     "psycopg-binary>=3.3.2",
     "psycopg2-binary>=2.9.11",
@@ -26,6 +29,7 @@ dependencies = [
     "strawberry-graphql[fastapi]>=0.289.2",
     "typing>=3.10.0.0",
     "uvicorn>=0.40.0",
+    "asyncpg>=0.31.0",
 ]
 
 [tool.black]
