--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,6 +46,10 @@ services:
     command: ["python", "-m", "uvicorn", "mcp_main:app", "--host", "0.0.0.0", "--port", "8001"]
     environment:
       DATABASE_URL: postgresql://postgres:postgres@postgres:5432/kgserver
+      # Pass 1 (ingest worker) uses LLM; pass through same keys as api
+      PASS1_LLM_BACKEND: ${PASS1_LLM_BACKEND:-anthropic}
+      ANTHROPIC_API_KEY: ${ANTHROPIC_API_KEY:-}
+      OPENAI_API_KEY: ${OPENAI_API_KEY:-}
     ports:
       - "8001:8001"
     depends_on:
