--- a/kgserver/pyproject.toml
+++ b/kgserver/pyproject.toml
@@ -7,6 +7,8 @@ requires-python = ">=3.13"
 dependencies = [
     # "kgbundle",
     "black[jupyter]>=26.1.0",
+    "numpy>=1.26.0",
+    "scikit-learn>=1.3.0",
     "chainlit>=2.0.0",
     "fastapi>=0.128.0",
     "fastmcp>=2.14.4",
