chat: example prompts, single spinner, collapse tool steps, billing detection
- Show example prompts as visible buttons in chat (not only in settings dropdown)
- Replace per-tool steps with one expandable 'Working…' step (cot=tool_call)
- Add animated braille spinner in thinking message until answer is ready
- Detect billing/credit/rate-limit in LLM response and show warning
- Short graph-aligned example prompts in examples.yaml (BRCA, ST3Gal1, DDR, etc.)

Made-with: Cursor

--- a/kgserver/chainlit/examples.yaml
+++ b/kgserver/chainlit/examples.yaml
@@ -1,32 +1,21 @@
 # Medical Literature Knowledge Graph — Example Prompts
-# Format: "Label shown in dropdown": "Full prompt text sent to the LLM"
+# Short prompts that map to rich entities/relationships in the graph.
+# Format: "Label": "Full prompt text sent to the LLM"
 
-"HIV treatment resistance mechanisms": >
-  What does the literature say about mechanisms of HIV resistance
-  to antiretroviral therapy? Include key genes and pathways mentioned
-  in the knowledge graph.
+"BRCA mutations & cancer risk": >
+  What does the graph say about BRCA1/BRCA2 mutations and risk of breast and ovarian cancer, and what risk-reducing interventions are supported?
 
-"CD4 count as prognostic marker": >
-  Summarize evidence on CD4 T-cell count as a prognostic marker
-  in HIV/AIDS disease progression. Which papers are most cited?
+"ST3Gal1 & ulcerative colitis": >
+  How does ST3Gal1 regulate intestinal barrier function and inflammatory cytokines in ulcerative colitis, and what downstream genes does it control?
 
-"Drug-drug interactions in ART": >
-  What are the most clinically significant drug-drug interactions
-  in antiretroviral therapy regimens, according to the literature?
+"DDR biomarkers & ES-SCLC": >
+  What is the DDR-Immune Fitness score, and how do HRD, TMB, and cGAS-STING predict response to PARP inhibitors and checkpoint blockers in ES-SCLC?
 
-"Long COVID neurological symptoms": >
-  What patterns of neurological symptoms appear in long COVID
-  patients according to recent literature in the knowledge graph?
+"H. pylori → YY1 → JAK2/STAT3 → gastric cancer": >
+  How does H. pylori drive gastric cancer through the YY1–JAK2–STAT3 axis and EMT, and which drugs interrupt this pathway?
 
-"Find related conditions (graph query)": >
-  Use the knowledge graph tools to find conditions and comorbidities
-  strongly associated with HIV-associated neurocognitive disorder (HAND).
+"Bioactive glass nanoparticles & TNBC": >
+  What mechanisms do bioactive glass nanoparticles use against triple-negative breast cancer, and what cellular processes do they induce?
 
-"Summarize recent papers on a topic": >
-  Search the knowledge graph for papers published after 2020 on
-  integrase strand transfer inhibitors (INSTIs) and summarize
-  their main findings.
-
-"Entity extraction demo": >
-  Pick any paper in the knowledge graph and show me the entities
-  and relationships that were extracted from it.
+"GenMine TOP vs FoundationOne in sarcoma": >
+  How do GenMine TOP and FoundationOne CDx compare for fusion genes and actionable targets in sarcoma, and what treatments do they enable?
