Add Pass 1a vocabulary seeding and UMLS type validation (PLAN11)
- Pass 1a (pass1a_vocab.py): Lightweight entity-only extraction across papers;
  merge into shared vocab.json; run UMLS semantic-type validation on entities
  with umls_id (with in-memory cache); write seeded_synonym_cache.json for Pass 2.
- authority_lookup.py: Add validate_umls_type(umls_id, assigned_type) and
  UMLS_SEMANTIC_TYPE_TO_ENTITY_TYPES mapping; optional _semantic_types_override
  for tests.
- pass1_extract.py: Add --vocab-file; include vocab in extraction prompt
  (_build_system_prompt_with_vocab); normalize entity types to bundle PascalCase
  (normalize_entity_type, NORMALIZED_TO_BUNDLE_CLASS).
- run-ingest.sh: Four-pass flow (1a → 1b → 2 → 3); Pass 1b uses --vocab-file,
  Pass 2 uses --synonym-cache pass1_vocab/seeded_synonym_cache.json; skip curl
  when XML already exists.
- ingest_worker.py: _ensure_workspace_dirs returns 4-tuple (add pass1_vocab);
  run Pass 1a before Pass 1b; use seeded synonym cache in Pass 2 when present.
- INGESTION.md: Document four-pass flow and future work (evidence validation).
- Remove IMPLEMENTATION_PLAN.md (targeted obsolete MedLitRelationshipExtractor).
- Tests: validate_umls_type (test_authority_lookup); normalize_entity_type and
  _build_system_prompt_with_vocab (test_pass1_extract); ingest_worker 4-tuple.

Made-with: Cursor

--- a/kgserver/Dockerfile
+++ b/kgserver/Dockerfile
@@ -28,7 +28,7 @@ COPY kgserver/index.md ./docs/index.md
 COPY docs/architecture.md ./docs/architecture.md
 COPY docs/index.md ./docs/reference/index.md
 COPY docs/api.md docs/bundle.md docs/canonical_ids.md docs/determinism.md docs/domains.md docs/pipeline.md docs/storage.md docs/graph_visualization.md docs/RELATIONSHIP_TRACING.md ./docs/reference/
-COPY README.md CLAUDE.md LAMBDA_LABS.md MEDLIT_SCHEMA_SPEC.md IMPLEMENTATION_PLAN.md STATUS_20260212.md NEXT_STEPS.md JATS_PARSER_NOTES.md jupyter.md summary.md VIBES.md holmes_example_plan.md snapshot_semantics_v1.md RETHINK_INGESTION.md ./docs/project/
+COPY README.md CLAUDE.md LAMBDA_LABS.md MEDLIT_SCHEMA_SPEC.md STATUS_20260212.md NEXT_STEPS.md JATS_PARSER_NOTES.md jupyter.md summary.md VIBES.md holmes_example_plan.md snapshot_semantics_v1.md RETHINK_INGESTION.md ./docs/project/
 COPY PLAN1.md PLAN2.md PLAN3.md PLAN4.md PLAN5.md PLAN6.md PLAN7.md ./docs/project/plans/
 COPY TODO1.md TODO2.md ./docs/project/todos/
 COPY kgserver/index.md kgserver/DOCKER_SETUP.md kgserver/DOCKER_COMPOSE_GUIDE.md kgserver/LOCAL_DEV.md kgserver/MCP_CLIENT_SETUP.md kgserver/GRAPHQL_VIBES.md kgserver/MCP_GQL_WRAPPER.md ./docs/kgserver/
